--- a/Garden Exhibitor Aid/View/Base.lproj/Main.storyboard
+++ b/Garden Exhibitor Aid/View/Base.lproj/Main.storyboard
@@ -52,6 +52,44 @@
             </objects>
             <point key="canvasLocation" x="749.27536231884062" y="-320.08928571428572"/>
         </scene>
+        <!--Exhibit Detail Master Controller-->
+        <scene sceneID="xS4-E1-3wY">
+            <objects>
+                <viewController id="9JY-d3-fXp" customClass="ExhibitDetailMasterController" customModule="Garden_Exhibitor_Aid" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Z0t-Vr-fpf">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ymB-UZ-3NU">
+                                <rect key="frame" x="0.0" y="58" width="414" height="366"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <connections>
+                                    <segue destination="ooD-pi-c3q" kind="embed" id="MaX-Um-1pi"/>
+                                </connections>
+                            </containerView>
+                            <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AEk-Vv-IQf">
+                                <rect key="frame" x="0.0" y="471" width="414" height="391"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <connections>
+                                    <segue destination="dh0-UY-r9q" kind="embed" id="P0X-nr-o7y"/>
+                                </connections>
+                            </containerView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Plants:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xDQ-lx-kBr">
+                                <rect key="frame" x="20" y="438" width="374" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="flj-9D-5oc"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="boY-uD-Zkd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1668.1159420289857" y="-320.08928571428572"/>
+        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
             <objects>
@@ -150,6 +188,101 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NVx-Q7-dZJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="757.97101449275374" y="315.40178571428572"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="CVp-co-dEr">
+            <objects>
+                <viewController id="ooD-pi-c3q" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="CWr-UX-wTW">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="366"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="aSX-ce-6df">
+                                <rect key="frame" x="87" y="18" width="240" height="128"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X0e-8I-gz1">
+                                <rect key="frame" x="20" y="173" width="374" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do " textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="LYp-so-aLi">
+                                <rect key="frame" x="20" y="202" width="374" height="128"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="sEe-eu-kjE"/>
+                                </constraints>
+                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="LYp-so-aLi" firstAttribute="leading" secondItem="CWr-UX-wTW" secondAttribute="leadingMargin" id="22M-bt-15F"/>
+                            <constraint firstItem="LYp-so-aLi" firstAttribute="trailing" secondItem="CWr-UX-wTW" secondAttribute="trailingMargin" id="AW4-gG-ywE"/>
+                            <constraint firstItem="LYp-so-aLi" firstAttribute="top" secondItem="X0e-8I-gz1" secondAttribute="bottom" constant="8" id="Amr-Mw-3Fq"/>
+                            <constraint firstItem="X0e-8I-gz1" firstAttribute="top" secondItem="aSX-ce-6df" secondAttribute="bottom" constant="27" id="Dy4-RW-1Du"/>
+                            <constraint firstItem="aSX-ce-6df" firstAttribute="leading" secondItem="CWr-UX-wTW" secondAttribute="leading" constant="87" id="GJt-F8-5yP"/>
+                            <constraint firstItem="aSX-ce-6df" firstAttribute="top" secondItem="CWr-UX-wTW" secondAttribute="top" constant="18" id="GRN-1Q-yHt"/>
+                            <constraint firstItem="X0e-8I-gz1" firstAttribute="leading" secondItem="CWr-UX-wTW" secondAttribute="leadingMargin" id="H9P-KV-SlY"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="LYp-so-aLi" secondAttribute="bottom" constant="36" id="NYr-9e-3pF"/>
+                            <constraint firstAttribute="trailing" secondItem="aSX-ce-6df" secondAttribute="trailing" constant="87" id="tza-YG-uzS"/>
+                            <constraint firstItem="X0e-8I-gz1" firstAttribute="trailing" secondItem="CWr-UX-wTW" secondAttribute="trailingMargin" id="w6l-Sb-Rw3"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uAn-KD-bcI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2469.5652173913045" y="-433.25892857142856"/>
+        </scene>
+        <!--Exhibit Table View Controller-->
+        <scene sceneID="LU8-Kk-8gJ">
+            <objects>
+                <tableViewController id="dh0-UY-r9q" customClass="ExhibitTableViewController" customModule="Garden_Exhibitor_Aid" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="fVn-t4-fEs">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="391"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" textLabel="1a1-s8-tRa" detailTextLabel="t5Y-QW-6WU" imageView="ySz-Z1-bD4" style="IBUITableViewCellStyleSubtitle" id="875-G9-UvD" customClass="PlantTableViewCell" customModule="Garden_Exhibitor_Aid" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="55.5"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="875-G9-UvD" id="dKc-QR-hyR">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="55.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="1a1-s8-tRa">
+                                            <rect key="frame" x="91" y="10" width="33.5" height="20.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Detail" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="t5Y-QW-6WU">
+                                            <rect key="frame" x="91" y="31.5" width="33" height="14.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" image="plant" id="ySz-Z1-bD4">
+                                            <rect key="frame" x="20" y="0.0" width="56" height="55.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </imageView>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="dh0-UY-r9q" id="5dT-KG-gXC"/>
+                            <outlet property="delegate" destination="dh0-UY-r9q" id="7Yk-T5-Be4"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TIn-y5-F0x" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2471" y="-32"/>
         </scene>
     </scenes>
     <resources>
